fix to horizontal scroll in dropdown

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -227,12 +227,12 @@ body {
 }
 
 #incident-grid.filtering .incident:not(.filter-selected){
-  .cellRGBA(0.05) !important;
+  .cellRGBA(0.02) !important;
   &:hover {
     .cellRGBA(1);
   }
 }
-#incident-grid.filtering .event:not(.filter-selected){
+#incident-grid.filtering .event:not(.filter-selected) {
   .opacity(45);
   &:hover{
     .opacity(100);
@@ -736,7 +736,8 @@ footer {
         .border-radius(4px);
         min-width: 138px;
         max-height: 315px;
-        overflow:scroll;
+        overflow:hidden;
+        overflow-y:scroll;
         li {
           position: relative;
           .font-size(12);
